work in prgress on chapters

--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -335,7 +335,7 @@
      "text": [
       "The character(s) selected by letters[::2] are ACEGIK\n",
       "The character(s) selected by letters[:] are ABCDEFGHIJK\n",
-      "The character(s) selected by letters[::-2] are KIGECA\n",
+      "The character(s) selected by letters[::-2] are DB\n",
       "The character(s) selected by letters[:-5:-2] are KI\n"
      ]
     }
@@ -347,6 +347,17 @@
     "print(f'The character(s) selected by letters[:] are {letters[:]}')\n",
     "print(f'The character(s) selected by letters[::-2] are {letters[::-2]}')\n",
     "print(f'The character(s) selected by letters[:-5:-2] are {letters[:-5:-2]}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "As you can see, when the step is negative (last 2 examples), start and stop will be \"reversed\". I don't understand this design decision."
    ]
   },
   {
