--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -73,25 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "ca6edbdd",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the number 1 letter of the alphabet is a\n",
-      "the number 2 letter of the alphabet is b\n",
-      "the number 3 letter of the alphabet is c\n",
-      "the number 4 letter of the alphabet is d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (i, c) in enumerate(\"abcd\"):\n",
     "    print(f'the number {i+1} letter of the alphabet is {c}')\n",
@@ -114,25 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e295c8d2",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "employee_id;last_name;role\n",
-      "1;Jacobs;ict architect\n",
-      "2;Howard;programmer\n",
-      "3;Pierson;data scientist\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for line in open(\"data/employees.txt\"):\n",
     "    print(line.strip())\n"
@@ -157,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "35f5d0cc",
    "metadata": {
     "slideshow": {
@@ -231,30 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "4e6527ce",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S   is encoded by 83 \n",
-      "o   is encoded by 111\n",
-      "m   is encoded by 109\n",
-      "e   is encoded by 101\n",
-      "    is encoded by 32 \n",
-      "T   is encoded by 84 \n",
-      "e   is encoded by 101\n",
-      "x   is encoded by 120\n",
-      "t   is encoded by 116\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = \"Some Text\"\n",
     "ords = []\n",
@@ -286,23 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2f5be15c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'guava', 'kiwi']\n",
-      "['kiwi', 'apple', 'guava']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"kiwi\", \"apple\", \"guava\"]\n",
     "print(sorted(fruits))\n",
@@ -311,22 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "aca1e38e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'guava', 'kiwi']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"kiwi\", \"apple\", \"guava\"]\n",
     "fruits.sort()\n",
@@ -347,23 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d458696e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n",
-      "[4, 3, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sorted([3, 2, 4, 1])) # default is reverse=False\n",
     "print(sorted([3, 2, 4, 1], reverse=True))"
@@ -371,25 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8f9467f3",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [3, 2, 4, 1]\n",
     "numbers.sort(reverse=True)\n",
@@ -414,25 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a764939c",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['kiwi', 'apple', 'guava']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def second_character_sorter(word):\n",
     "    return word[1]\n",
@@ -465,25 +379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "22a1c25b",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['kiwi', 'apple', 'guava']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"kiwi\", \"apple\", \"guava\"]\n",
     "\n",
@@ -504,28 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "2841bd87",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'banana', 'color': 'yellow', 'origin': 'Africa'},\n",
-       " {'name': 'apple', 'color': 'green/red', 'origin': 'Europe'},\n",
-       " {'name': 'orange', 'color': 'orange', 'origin': 'Europe'},\n",
-       " {'name': 'kiwi', 'color': 'green', 'origin': 'New Zealand'}]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\n",
     "    {'name': 'apple', 'color': 'green/red', 'origin': 'Europe'},\n",
@@ -552,28 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "f0313fe8",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'first': 'Julia', 'last': 'Adams', 'age': 28},\n",
-       " {'first': 'Mark', 'last': 'Adams', 'age': 35},\n",
-       " {'first': 'Rose', 'last': 'Berg', 'age': 51},\n",
-       " {'first': 'Brad', 'last': 'Young', 'age': 64}]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "persons = [{'first': 'Mark', 'last': 'Adams', 'age': 35},\n",
     "           {'first': 'Brad', 'last': 'Young', 'age': 64}, \n",
@@ -595,7 +470,7 @@
     }
    },
    "source": [
-    "## Using `filter()` and `map()`\n",
+    "## Using `filter()` and `map()` (optional)\n",
     "\n",
     "These functions are used on collections, to filter the elements in them on some property, or to change each element or to swap them for something else.  \n",
     "\n",
@@ -620,25 +495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "9c256a2b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Kiwi', 'Orange', 'Apple', 'Guava', 'Banana']"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"kiwi\", \"orange\", \"apple\", \"guava\", \"banana\"]\n",
     "\n",
@@ -650,25 +514,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "e7bacd72",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['orange', 'banana']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"kiwi\", \"orange\", \"apple\", \"guava\", \"banana\"]\n",
     "\n",
@@ -680,44 +533,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16fd8589",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Using comprehensions as alternative (optional)\n",
-    "All examples in the above section can also be implemented using **comprehensions**. However, since these fall outside the scope of this course only a few optional examples of these will be presented here. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "0593907d",
+   "id": "65516922",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Kiwi', 'Orange', 'Apple', 'Guava', 'Banana']\n",
-      "['orange', 'banana']\n"
-     ]
-    }
-   ],
    "source": [
-    "fruits = [\"kiwi\", \"orange\", \"apple\", \"guava\", \"banana\"]\n",
-    "\n",
-    "# mapping\n",
-    "print([fruit.capitalize() for fruit in fruits])\n",
-    "\n",
-    "# filtering\n",
-    "print([fruit for fruit in fruits if \"an\" in fruit])"
+    "Note that working with these functions is superceded by the use of comprehensions. These are outlined in the next chapter."
    ]
   },
   {
@@ -730,7 +553,174 @@
    },
    "source": [
     "## Working with modules\n",
-    "\n"
+    "\n",
+    "The core functionality of Python that is available to you once you start coding is rather small. That is because the deveolpers of the language wanted to keep the memory footprint as small as possible. \n",
+    "Why load functionality if there is a significant possibility it will not be used? \n",
+    "\n",
+    "To solve the footprint problem, most functionality in Python is put inside **_modules_**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d3fc120",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "To make use of functionality (or data) within modules you need to **_import_** these. Here is a small example to illustrate:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "855ece6d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.sqrt(16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d91ee10d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "When you want to access data or functions within a module you need to use the dot operator together with the module name, as in `math.sqrt()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c33d9e8d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "To prevent having to type the module name all the time you can also specify which attributes of a module you want to import using the `from <module> import <attr>` syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "40f2c2c9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import ceil\n",
+    "ceil(3.1222)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c375890",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Or, alternatively, use `from <module> import <attr> as <name>` to use a different name than the one specified for/in the module itself:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "338e45bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import floor as fl\n",
+    "fl(3.9999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ccde64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7d1f0a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Rob!\n",
+      "\n",
+      "a simple module\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the module is defined by file `my_module.py` in folder `scripts`\n",
+    "from scripts import my_module\n",
+    "my_module.say_hello(\"Rob\")\n",
+    "\n",
+    "#or\n",
+    "# from scripts.my_module import say_hello\n",
+    "# say_hello(\"Mike\")\n",
+    "\n",
+    "#or\n",
+    "# from scripts.my_module import *\n",
+    "# say_hello(\"Rose\")\n",
+    "\n",
+    "print(my_module.__doc__)"
    ]
   }
  ],
@@ -751,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
