--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "34656a15",
    "metadata": {
     "slideshow": {
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "fruits = ['kiwi', 'banana', 'apple', 'orange']"
+    "fruits = ['kiwi', 'banana', 'apple', 'pear']"
    ]
   },
   {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f9c01980",
    "metadata": {
     "slideshow": {
@@ -131,16 +131,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kiwi !\n",
-      "banana !\n",
-      "apple !\n",
-      "orange !\n"
+      "Jummy, a kiwi!\n",
+      "Jummy, a banana!\n",
+      "Jummy, a apple!\n",
+      "Jummy, a pear!\n"
      ]
     }
    ],
    "source": [
     "for fruit in fruits:\n",
-    "    print(fruit, \"!\")"
+    "    print(f'Jummy, a {fruit}!')"
    ]
   },
   {
@@ -567,7 +567,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
