--- a/08_oo_programming.ipynb
+++ b/08_oo_programming.ipynb
@@ -11,8 +11,18 @@
    "source": [
     "# Object-oriented programming\n",
     "\n",
-    "You already know that Python is an _object-oriented_ programming language and have seen some aspects of it demonstrated, for instance the dot operator that lets you access methods on objects.\n",
-    "\n",
+    "You already know that Python is an _object-oriented_ programming language and have seen some aspects of it demonstrated, for instance the dot operator that lets you access methods on objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6974b799",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "The key to this programming paradigm is **classes** that form the blueprint for creating **objects** (often called instances).\n",
     "\n",
     "\n",
@@ -28,8 +38,232 @@
     }
    },
    "source": [
-    "Although Python provides a wealth of classes, there are many occasions where the need for custom classes arise. Let's walk through an example.\n",
+    "Although Python provides a wealth of classes, there are many occasions where the need for custom classes arise.  \n",
     "\n",
+    "The essence of using classes is to combine data and related functionality (methods) into a single entity.\n",
+    "Before embarking on a little (slightly) realistic example let's have a look at a minimal class and build some data and functionality into it.  \n",
+    "\n",
+    "Here is a Duck class that does absolutely nothing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "44ca1beb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Duck:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "031241f8",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "However, there is something you can do _with_ it: you can create a Duck _**instance**_:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d9bae859",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mallard = Duck()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d24c73",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The duck instance called mallard is a single \"materialization\" of the Duck blueprint. Besides printing it there is nothing it can do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "950956d1",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Duck object at 0x7fa141c07070>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mallard)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "091fcf48",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "By printing it, you get to see the name of the objects' class, where it was defined, en where this instance lives in memory. When a new instance is created, it will only have a different memory address:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a3bc66f0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Duck object at 0x7fa141c07070>\n",
+      "<__main__.Duck object at 0x7fa141c50520>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mallard)\n",
+    "shellduck = Duck()\n",
+    "print(shellduck)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a36f7d43",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now, if we want to have a use for this duck we could give it something to do: swimming for instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a0425807",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quack quack\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Duck:\n",
+    "    def swim(self):\n",
+    "        print('quack quack')\n",
+    "        \n",
+    "eider = Duck()\n",
+    "eider.swim()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca2b847",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now we have a class specifying behaviour (a method) but no properties (data / variables). Don't worry about the `self` just yet. Let's give Ducks a name as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e7e30da9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quack quack I am a Ruddy Duck\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Duck:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def swim(self):\n",
+    "        print(f'quack quack I am a {self.name}')\n",
+    "        \n",
+    "\n",
+    "ruddy_duck = Duck(\"Ruddy Duck\")\n",
+    "ruddy_duck.swim()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71ef216a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here is a first class with data and functionality and a first instance demonstrating the use of both.\n",
+    "\n",
+    "\n",
+    "Let's walk through a slightly more realistic example.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b972ed85",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Suppose you have a small theater and want to have a system for managing your reservations. Since you are a beginning Python enthousiast you decide to program it yourself.\n",
     "\n",
     "The first thing any good (OO-)programmer would do is to _model_ the entities and their relations within the application."
@@ -171,7 +405,7 @@
     }
    },
    "source": [
-    "The `Customer(...)` expression is where a new Customer instance is created. Under water, the `__init__()` method is invoked and by the Python interpreter and the `self` reference is injected.  \n",
+    "The `Customer(...)` expression is where a new Customer instance is created. Under water, the `__init__()` method is invoked by the Python interpreter and the `self` reference is injected.  \n",
     "\n",
     "You already learned that you can use the dot operator on object instances to invoke methods and access data. That is used here as well to access the Customer properties. \n"
    ]
@@ -375,7 +609,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b92a5515",
    "metadata": {
@@ -413,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
