--- a/05_reading_writing_files.ipynb
+++ b/05_reading_writing_files.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "426c0db5",
    "metadata": {
     "slideshow": {
@@ -139,28 +139,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,m,180\n",
-      "2,m,188\n",
-      "3,f,178\n",
-      "4,f,182\n",
-      "5,f,172\n",
-      "6,m,189\n"
+      "['1', 'm', '180']\n",
+      "['2', 'm', '188']\n",
+      "['3', 'f', '178']\n",
+      "['4', 'f', '182']\n",
+      "['5', 'f', '172']\n",
+      "['6', 'm', '189']\n"
      ]
     }
    ],
    "source": [
     "file = open(\"data/lengths.csv\", \"r\")\n",
     "for line in file:\n",
-    "    print(line.strip())"
+    "    print(line.strip().split(',')) # of course you want to split the data to separate values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b59b75a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
