--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e663ca8",
+   "id": "c985b65b",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3550b1a7",
+   "id": "fd3acfc1",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea5067b3",
+   "id": "6db8dddc",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d8b203",
+   "id": "8ff15b6e",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d699eb",
+   "id": "9d00cf9d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "7d1f0a67",
    "metadata": {
     "slideshow": {
@@ -757,9 +757,22 @@
      "output_type": "stream",
      "text": [
       "Hello Rob!\n",
+      "Help on module scripts.my_module in scripts:\n",
       "\n",
-      "a simple module\n",
-      "\n"
+      "NAME\n",
+      "    scripts.my_module - a simple module\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    say_hello(name)\n",
+      "\n",
+      "DATA\n",
+      "    message = 'Programming is for everyone'\n",
+      "\n",
+      "FILE\n",
+      "    /Users/michielnoback/git_projects/python_intro/scripts/my_module.py\n",
+      "\n",
+      "\n",
+      "None\n"
      ]
     }
    ],
@@ -771,7 +784,594 @@
     "# from scripts.my_module import say_hello\n",
     "# say_hello(\"Mike\")\n",
     "\n",
-    "print(my_module.__doc__)"
+    "print(help(my_module)) # use help to get info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f523a6d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Core modules\n",
+    "\n",
+    "Besides the math module we have seen before Python ships with a wealth of other modles, each with their specific purpose and application domain. Here are just a few, and even less examples; have a look at [The Python docs](https://docs.python.org/3/library/) for a complete listing.  \n",
+    "\n",
+    "For all modules, importing them and typing `help(module)` is the best way to get detailed information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac8b96e5",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "| **module**          | **purpose**                                         |\n",
+    "|---------------------|-----------------------------------------------------|\n",
+    "| **time & datetime** | time and date manipulations                         |\n",
+    "| **math**            | math data and functions                             |\n",
+    "| **os & os.path**    | operating system interface                          |\n",
+    "| **sys**             | interpreter acces                                   |\n",
+    "| **itertools**       | functions creating iterators for efficient looping  |\n",
+    "| **csv**             | cvs file reading and parsing                        |\n",
+    "| **pickle**          | storing objects on disk                             |\n",
+    "| **shelve**          | storing objects in a \"dict on disk\"                 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06dfbff2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Module `sys`\n",
+    "This module is used for interacting with the interpreter, the _Python system_, not with the Operating System (see module `os`). Here are the main attributes and functions (copied from help):\n",
+    "\n",
+    "Objects:  \n",
+    "\n",
+    "- argv -- command line arguments; argv[0] is the script pathname if known\n",
+    "- stdin -- standard input file object; used by input()\n",
+    "- stdout -- standard output file object; used by print()\n",
+    "- stderr -- standard error object; used for error messages\n",
+    "\n",
+    "By assigning other file objects (or objects that behave like files)\n",
+    "to these, it is possible to redirect all of the interpreter's I/O.\n",
+    "\n",
+    "Functions:  \n",
+    "- exit() -- exit the interpreter by raising SystemExit      \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4159f3be",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Example: using redirection of output stream. By providing a `write()` method you can redirect messages sent to the output stream, as in `print()`. First we need an interceptor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f2ae764",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class MyLogger:\n",
+    "    def __init__(self):\n",
+    "        self.log = ['My Logger\\n']\n",
+    "        self.msgCount = 0\n",
+    "    def write(self, message):\n",
+    "        if message == '\\n':\n",
+    "            return  \n",
+    "        self.msgCount += 1\n",
+    "        self.log.append('[{}: {}]\\n'.format(self.msgCount, message) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6bcda8",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Next we can use this to intercept, store and adjust print messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "91117c2f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start log test\n",
+      "\n",
+      "My Logger\n",
+      "[1: a first message]\n",
+      "[2: a second message]\n",
+      "\n",
+      "end log test\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print('start log test\\n') ## to regular std out\n",
+    "myLog = MyLogger()\n",
+    "_out = sys.stdout         ## store for later usage\n",
+    "sys.stdout = myLog        ## redirect stdout to myLogger\n",
+    "print('a first message')  ## print to myLogger\n",
+    "print('a second message')\n",
+    "sys.stdout = _out         ## restore print to std out\n",
+    "print(''.join(myLog.log)) ## print myLog to std out\n",
+    "print('end log test')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b925b3fc",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Modules `os` & `os.path`\n",
+    "\n",
+    "As stated, the `os` module is used to interact with the operating system, especially the file system. Here are some common use cases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "32c42ade",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/michielnoback/git_projects/python_intro\n",
+      "/Users/michielnoback/Desktop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['sets.png', 'eBooks']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())                          #working dir - defaults to where the script lives\n",
+    "#os.chdir(\"~/Desktop\")                      #relative paths from user home don't work\n",
+    "os.chdir(os.path.expanduser(\"~/Desktop\"))   #this workaround needed, or an absolute path\n",
+    "print(os.getcwd())\n",
+    "os.listdir()[:2]        # list contents (only first two items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f2b40a4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Other `os` functions that are often used:\n",
+    "\n",
+    "- **`os.mkdir(path[, mode])`**: Create a directory named path (with unix mode). You can also create temporary directories; see tempfile module\n",
+    "- **`os.remove(path)`**: Remove (delete) the file path. If path is a directory, an OSError is raised; see rmdir() below to remove a directory.\n",
+    "- **`os.rename(src,dst)`**: Rename the file or directory src to dst\n",
+    "- **`os.system(command)`**: Execute the command (a string) in a subshell\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26da33da",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Some `os.path` goodies\n",
+    "\n",
+    "- **`os.path.sep`**: The character used by the OS to separate pathname components: '/' (Linux) or '\\\\' (Windows)\n",
+    "- **`os.path.exists(path)`**: True if path refers to an existing path\n",
+    "- **`os.path.isfile(path)`**: True if path is an existing regular file\n",
+    "- **`os.path.isdir(path)`**: True if path is an existing directory\n",
+    "- **`os.path.split(path)`**: a split pathname into a pair (head, tail) where tail is the last pathname component and head is everything leading up to it\n",
+    "- **`os.path.join(path1[, path2[, ...]])`**: an intelligently joined set of components\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d790a34f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('/Users/michielnoback', 'Desktop')\n",
+      "Downloads/data/project1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os.path as path\n",
+    "print(path.split(os.getcwd()))\n",
+    "print(path.join(\"Downloads\", \"data\", \"project1\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e7de1c44",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### The `itertools` module\n",
+    "\n",
+    "Module `itertools` provides functions that create iterators for efficient looping. Here are a few:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a8f47a6c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repeat(42, 5)\n",
+      "[42, 42, 42, 42, 42]\n",
+      "[(1, 'a'), (1, 'b'), (2, 'a'), (2, 'b'), (3, 'a'), (3, 'b')]\n",
+      "[2, 6, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools as it\n",
+    "print(it.repeat(42, 5))         # prints the type and properties, not the data\n",
+    "print(list(it.repeat(42, 5)))   # need to wrap it in collection type or loop it\n",
+    "print(list(it.product([1,2,3],['a', 'b'])))\n",
+    "print(list(it.accumulate([2, 4, 6])))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4e332894",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Module `csv`\n",
+    "\n",
+    "Text files with the csv format are quite ubiquitous in data science.  \n",
+    "\n",
+    "Of course, you can write your own parser for every file type, which is not difficult of course, but you can make it even easier for yourself. Just use module csv!  \n",
+    "\n",
+    "Here, I present some examples for reading csv files. Remember that writing is just as easy!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9357f2f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "As example, see the input file `data/exp_data.csv`:\n",
+    "\n",
+    "```\n",
+    "exp,value,message\n",
+    "1,0.567,OK\n",
+    "2,0.334,OK\n",
+    "3,0.325,ND\n",
+    "4,0.766,OK\n",
+    "5,0.455,OK\n",
+    "6,0.421,ERR\n",
+    "7,0.876,OK\n",
+    "```\n",
+    "\n",
+    "Let's look at how to process this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fb541ed1",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['exp', 'value', 'message']\n",
+      "['1', '0.567', 'OK']\n",
+      "['2', '0.334', 'OK']\n",
+      "['3', '0.325', 'ND']\n",
+      "['4', '0.766', 'OK']\n",
+      "['5', '0.455', 'OK']\n",
+      "['6', '0.421', 'ERR']\n",
+      "['7', '0.876', 'OK']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "csv_reader = csv.reader(open('data/exp_data.csv')) # parameter delimiter defaults to ','\n",
+    "for row in csv_reader:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37d9351f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Alternatively, you can get an iterator of dictionaries where the first line in the file is assumed to be a header line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "207c63af",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'exp': '1', 'value': '0.567', 'message': 'OK'}\n",
+      "{'exp': '2', 'value': '0.334', 'message': 'OK'}\n",
+      "{'exp': '3', 'value': '0.325', 'message': 'ND'}\n",
+      "{'exp': '4', 'value': '0.766', 'message': 'OK'}\n",
+      "{'exp': '5', 'value': '0.455', 'message': 'OK'}\n",
+      "{'exp': '6', 'value': '0.421', 'message': 'ERR'}\n",
+      "{'exp': '7', 'value': '0.876', 'message': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "csv_dict_reader = csv.DictReader(open('data/exp_data.csv'))\n",
+    "for row in csv_dict_reader:\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "14228240",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### The `pickle` module\n",
+    "\n",
+    "Python can write any data structure and objects into a file and read it again out of that file.\n",
+    "This is done using the pickle module.  \n",
+    "\n",
+    "This is a very useful feature if -for example- you want to store program state for a next run.\n",
+    "Here is a simple example.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "500dc2d1",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'linewidth': 60, 'verbosity': 'HIGH'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "my_preferences = {'linewidth': 60, 'verbosity': 'HIGH'}\n",
+    "\n",
+    "with open('data/preferences', mode='bw') as dmp:  #write to bniary mode\n",
+    "    pickle.dump(my_preferences, dmp)\n",
+    "    \n",
+    "# don't try to read the file - it is binary\n",
+    "\n",
+    "with open('data/preferences', mode='rb') as dmp:  #read from binary mode\n",
+    "    loaded_prefs = pickle.load(dmp)\n",
+    "\n",
+    "print(loaded_prefs)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "73488b59",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### The `shelve` module\n",
+    "\n",
+    "Related to the pickle module is the shelve module.  \n",
+    "It is generally used to store data in a database-like structure.  \n",
+    "The difference is you do NOT have to load the entire data structure every time you want to access a single item of it.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "16df27fd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here is a first run of the script: it stores three users. \n",
+    "When you call open() on a non-existing shelve, one is automatically created.\n",
+    "With the example below, a binary filed named `users.db` is created.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "768d91ed",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Michiel', 'access': 'ALL'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import shelve\n",
+    "users = shelve.open(\"data/users\")\n",
+    "users['Mich'] = dict(name='Michiel', access='ALL')\n",
+    "users['Piet'] = dict(name='Piet', access='EDIT')\n",
+    "users['Sven'] = dict(name='Sven', access='NONE')\n",
+    "\n",
+    "print(users['Mich'])\n",
+    "users.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53a27fc5",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now do an update, and a read operation; imagine this is in another shell or script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "50bd391e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Michiel', 'access': 'ALL'}\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_users = shelve.open(\"data/users\")\n",
+    "new_users['Arne'] = dict(name='Arne Poortinga', access='MIN')\n",
+    "print(new_users['Mich'])\n",
+    "print(len(new_users))    # 4 users in the database now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81bc1cf3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### JSON\n",
+    "Although pickle and shelve are convenient, With serious applications JSON is the way to go. There are many libraries and programming languages with integrated support for json, and stored files are human-readable as well."
    ]
   }
  ],
