OO chapter first version finished

--- a/07_comprehensions.ipynb
+++ b/07_comprehensions.ipynb
@@ -160,6 +160,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cadac85",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "The above example shows a list comprehension. However, this general structure applies to all comprehension types. All comprehension have an iteration at their core that generate data elements. These data elements can be filtered using a predicate, and optionally be mapped -to multiple values if so required- to the resulting values that end up in the final collection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9a2b03be",
    "metadata": {
     "slideshow": {
@@ -208,10 +220,10 @@
     }
    },
    "source": [
-    "#### nested comprehensions\n",
+    "#### Nested comprehensions\n",
     "\n",
     "Comprehensions can be nested to create complex combinations and datastructures.  \n",
-    "Note that when you think the code gets unclear it is time to simplify thigs and switch back to regular flow control."
+    "Note that when you think the code gets unclear it is time to simplify things and switch back to regular flow control."
    ]
   },
   {
@@ -239,6 +251,161 @@
     "\n",
     "print([str(a) + b for a in A for b in B])\n",
     "print([[a, b] for a in A for b in B])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3697674c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Besides generating nested structures, they can also be used to filter and process nested stuctures. For instance, given this list of x-y-z coordinates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e513c271",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3, -5, -7, -5]\n",
+      "['9/2/-3', '2/-5/4', '5/-7/-5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "xyz_coordinates = [(4, 8, 1), (9, 2, -3), (2, -5, 4), (5, -7, -5)]\n",
+    "\n",
+    "#filter for coordinates that are negative\n",
+    "print([coord for xyz in xyz_coordinates for coord in xyz if coord < 0])\n",
+    "\n",
+    "#filter for xyz combinations where any coordinate is negative\n",
+    "print([f'{x}/{y}/{z}' for (x, y, z) in xyz_coordinates if x < 0 or y < 0 or z < 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecfb6b84",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Some more examples\n",
+    "Below are some additional examples to give you a general idea of the possibilities. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51683162",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3.0, 81),\n",
+       " (1.0, 1),\n",
+       " (2.24, 25),\n",
+       " (2.0, 16),\n",
+       " (2.83, 64),\n",
+       " (1.73, 9),\n",
+       " (1.41, 4),\n",
+       " (1.0, 1),\n",
+       " (2.0, 16)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "numbers = [9, 1, 5, 4, 8, 3, 2, 1, 4]\n",
+    "\n",
+    "# a list of tuples: the square root (rounded) and square of each number\n",
+    "[(round(math.sqrt(n), 2), n**2) for n in numbers]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fb49dfcd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3.0, 81),\n",
+       " (nan, 1),\n",
+       " (2.23606797749979, 25),\n",
+       " (2.0, 16),\n",
+       " (nan, 64),\n",
+       " (1.7320508075688772, 9),\n",
+       " (1.4142135623730951, 4),\n",
+       " (1.0, 1),\n",
+       " (2.0, 16)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [9, -1, 5, 4, -8, 3, 2, 1, 4]\n",
+    "NaN = float(\"NaN\") # create a NaN variable\n",
+    "\n",
+    "# a list of tuples: the square root (rounded) and square of each number if number is positive else a NaN\n",
+    "[(math.sqrt(n), n**2) if n > 0 else (NaN, n**2) for n in numbers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f16eef44",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.0, 2.23606797749979, 2.0, 1.7320508075688772, 1.4142135623730951, 1.0, 2.0]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [9, -1, 5, 4, -8, 3, 2, 1, 4]\n",
+    "# only when n is positive\n",
+    "[n**0.5 for n in numbers if n >= 0]"
    ]
   },
   {
