--- a/08_oo_programming.ipynb
+++ b/08_oo_programming.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "44ca1beb",
    "metadata": {
     "slideshow": {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d9bae859",
    "metadata": {
     "slideshow": {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "950956d1",
    "metadata": {
     "slideshow": {
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Duck object at 0x7fa141c07070>\n"
+      "<__main__.Duck object at 0x10dc2a5e0>\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a3bc66f0",
    "metadata": {
     "slideshow": {
@@ -183,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Duck object at 0x7fa141c07070>\n",
-      "<__main__.Duck object at 0x7fa141c50520>\n"
+      "<__main__.Duck object at 0x10dc2a5e0>\n",
+      "<__main__.Duck object at 0x10dc2afa0>\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "bcea54b8",
    "metadata": {
     "slideshow": {
@@ -269,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The hash code is 284767675\n",
+      "The hash code is 282864336\n",
       "The class is <class '__main__.Duck'>\n",
       "The class attribute is <class '__main__.Duck'>\n",
       "mallard equals pintail:  False\n"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a0425807",
    "metadata": {
     "slideshow": {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e7e30da9",
    "metadata": {
     "slideshow": {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "91b1fe81",
    "metadata": {
     "slideshow": {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "4235192b",
    "metadata": {
     "slideshow": {
@@ -600,7 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Customer object at 0x7fbe709e8fa0>\n"
+      "<__main__.Customer object at 0x10dc7c4f0>\n"
      ]
     }
    ],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "3ac6e7b9",
    "metadata": {
     "slideshow": {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "ea9b53e9",
    "metadata": {
     "slideshow": {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "id": "3d38bcd5",
    "metadata": {
     "slideshow": {
@@ -792,6 +792,8 @@
     "        self.num_tickets = num_tickets\n",
     "    def __str__(self):\n",
     "        return f'Reservation by {self.customer.first} for {self.performance.title}: {self.num_tickets} tickets'\n",
+    "    def __repr__(self): # needed for printing when in container\n",
+    "        return f'name={self.customer.first} {self.customer.last}, tickets={self.num_tickets}'\n",
     "\n",
     "\n",
     "res1 = Reservation(cust1, perf1, 4)\n",
@@ -843,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "a8911aed",
    "metadata": {
     "slideshow": {
@@ -881,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "a85a0e3a",
    "metadata": {
     "slideshow": {
@@ -912,6 +914,147 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b80bc38c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Implementing an iteration hook\n",
+    "It would be very nice to be able to iterate the `Performance` class on its reservations. All you need to do is implement the `__iter__()` and `__next__()` hooks:\n",
+    "\n",
+    "```python\n",
+    "# should return an object responsible for iteration. Here: the object itself.\n",
+    "def __iter__(self):  \n",
+    "    self.index = 0\n",
+    "    return self\n",
+    "\n",
+    "# is responsible for the actual iteration process. \n",
+    "def __next__(self):  \n",
+    "    if self.index < len(self.reservations):\n",
+    "        res = self.reservations[self.index]\n",
+    "        self.index += 1\n",
+    "        return res\n",
+    "    else:\n",
+    "        raise StopIteration # required to end the iteration.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "79d444e4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Performance:\n",
+    "    def __init__(self, title, datetime, seat_price, max_seats):\n",
+    "        self.title = title\n",
+    "        self.datetime = datetime\n",
+    "        self.seat_price = seat_price\n",
+    "        self.max_seats = max_seats\n",
+    "        self.reservations = list()    # a list to store reservations\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f'{self.title} ({self.datetime} - €{self.seat_price}); reserved {self.tickets_sold()} out of {self.max_seats}'\n",
+    "    \n",
+    "    def add_reservation(self, reservation):\n",
+    "        '''Add a reservation to this performance.\n",
+    "        Raises a valueError when the reservation size exceeds the available seats.'''\n",
+    "        if self.tickets_sold() + reservation.num_tickets > self.max_seats:\n",
+    "            raise ValueError(f'only {self.max_seats - self.tickets_sold()} seats available')\n",
+    "        self.reservations.append(reservation)\n",
+    "\n",
+    "    def tickets_sold(self):\n",
+    "        '''Get the number of tickets sold'''\n",
+    "        total = 0\n",
+    "        for res in self.reservations:\n",
+    "            total += res.num_tickets\n",
+    "        return total\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.index = 0\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.index < len(self.reservations):\n",
+    "            res = self.reservations[self.index]\n",
+    "            self.index += 1\n",
+    "            return res\n",
+    "        else:\n",
+    "            raise StopIteration\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a80f1f3b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here is the iteration process in action."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d379554d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Romo and Julia (2023/03/08 20:00H - €15); reserved 11 out of 40\n",
+      "Reservation for Julia: 4 tickets\n",
+      "Reservation for Peter: 2 tickets\n",
+      "Reservation for Alex: 5 tickets\n"
+     ]
+    }
+   ],
+   "source": [
+    "perf3 = Performance(\"Romo and Julia\", \"2023/03/08 20:00H\", 15, 40)\n",
+    "res3 = Reservation(Customer(\"Julia\", \"Marsh\", \"j.marsh@example.com\"), perf3, 4)\n",
+    "perf3.add_reservation(res3)\n",
+    "res4 = Reservation(Customer(\"Peter\", \"Dole\", \"p.dole@example.com\"), perf3, 2)\n",
+    "perf3.add_reservation(res4)\n",
+    "res5 = Reservation(Customer(\"Alex\", \"Walsh\", \"a.walsh@example.com\"), perf3, 5)\n",
+    "perf3.add_reservation(res5)\n",
+    "\n",
+    "print(perf3)\n",
+    "for res in perf3:\n",
+    "    print(f'Reservation for {res.customer.first}: {res.num_tickets} tickets')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bec2be88",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Notice the **_chaining_** of the dot operator to access object that are properties of objects: `res.customer.first`.\n",
+    "\n",
+    "There are many more hooks you can implement; for indexing (`__getitem__()`), comparison (`__eq__()`) and many more.  \n",
+    "\n",
+    "[Here](https://towardsdatascience.com/a-guide-to-pythons-dunder-methods-3b8104fce335) is the link again to the website going deeper into the topic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ebe4160",
    "metadata": {
     "slideshow": {
@@ -920,6 +1063,101 @@
    },
    "source": [
     "This finishes this example. Can you improve or extend on the design?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6347f9b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### An alternative iteration\n",
+    "Alternatively, you can implement iteration using `__getitem__()`:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "43a12f26",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class PerformanceAltIt:\n",
+    "    def __init__(self, title, datetime, seat_price, max_seats):\n",
+    "        self.title = title\n",
+    "        self.datetime = datetime\n",
+    "        self.seat_price = seat_price\n",
+    "        self.max_seats = max_seats\n",
+    "        self.reservations = list()    # a list to store reservations\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f'{self.title} ({self.datetime} - €{self.seat_price}); reserved {self.tickets_sold()} out of {self.max_seats}'\n",
+    "    \n",
+    "    def add_reservation(self, reservation):\n",
+    "        '''Add a reservation to this performance.\n",
+    "        Raises a valueError when the reservation size exceeds the available seats.'''\n",
+    "        if self.tickets_sold() + reservation.num_tickets > self.max_seats:\n",
+    "            raise ValueError(f'only {self.max_seats - self.tickets_sold()} seats available')\n",
+    "        self.reservations.append(reservation)\n",
+    "\n",
+    "    def tickets_sold(self):\n",
+    "        '''Get the number of tickets sold'''\n",
+    "        total = 0\n",
+    "        for res in self.reservations:\n",
+    "            total += res.num_tickets\n",
+    "        return total\n",
+    "\n",
+    "    def __getitem__(self, k):\n",
+    "        return self.reservations[k]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "10ab7b6f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Romo and Julia (2023/03/08 20:00H - €15); reserved 11 out of 40\n",
+      "Reservation for Julia: 4 tickets\n",
+      "Reservation for Peter: 2 tickets\n",
+      "Reservation for Alex: 5 tickets\n",
+      "[name=Julia Marsh, tickets=4, name=Peter Dole, tickets=2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "perf4 = PerformanceAltIt(\"Romo and Julia\", \"2023/03/08 20:00H\", 15, 40)\n",
+    "res3 = Reservation(Customer(\"Julia\", \"Marsh\", \"j.marsh@example.com\"), perf4, 4)\n",
+    "perf4.add_reservation(res3)\n",
+    "res4 = Reservation(Customer(\"Peter\", \"Dole\", \"p.dole@example.com\"), perf4, 2)\n",
+    "perf4.add_reservation(res4)\n",
+    "res5 = Reservation(Customer(\"Alex\", \"Walsh\", \"a.walsh@example.com\"), perf4, 5)\n",
+    "perf4.add_reservation(res5)\n",
+    "\n",
+    "print(perf4)\n",
+    "\n",
+    "#iteration: no problem\n",
+    "for res in perf4:\n",
+    "    print(f'Reservation for {res.customer.first}: {res.num_tickets} tickets')\n",
+    "\n",
+    "#indexing and slicing\n",
+    "print(perf4[0:2])"
    ]
   },
   {
@@ -937,6 +1175,7 @@
     "* `__init__()`: used by constructor new Instance`()`\n",
     "* `__str__()`: used by `str( )` (and `print()`)\n",
     "* `__repr__()`: used by `repr()` (and `print()` when it does not find a `__str__()`)\n",
+    "* `__iter__()` and `__next__()` to implement iteration. Alternatively, this can be done using `__len__()` and `__getitem__()`\n",
     "\n",
     "\n",
     "\n"
